--- a/myproject/myapp/templates/myapp/base.html
+++ b/myproject/myapp/templates/myapp/base.html
@@ -112,7 +112,7 @@
     <title>{% block title %}{% endblock %}</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <base target="_blank">
+    <base target="_self">
 </head>
 <body>
 
@@ -136,21 +136,15 @@
             {% endif %}
           </a>
     
-          <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+          {% comment %} <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
             <li><a href="#" class="nav-link px-2 link-secondary"><i class="bi bi-house" ></i></a></li>
             <li><a href="{% url 'home' %}" class="nav-link px-2 link-dark" target="_self">Home</a></li>
             <li><a href="{% url 'api' %}" class="nav-link px-2 link-dark" target="_self">Services</a></li>
-            <li><a href="{% url 'login' %}" class="nav-link px-2 link-dark" target="_self">Se connecter</a></li>
-            <li><a href="{% url 'signup' %}" class="nav-link px-2 link-dark" target="_self">S'inscrire</a></li>
-            {% comment %} {% if  user.is_authenticated%}
-            <span class="navbar-text"> logged as : {{user.get_username}}</span>
-            <a class="btn btn-sm btn-outline-secondary" href="{%url 'logout'%}?next={{request.path}}"> Log out </a> 
-            {% else %}
-            <span class='navbar-text'> You are not logged  </span>
-          {% endif %} {% endcomment %}
+            <li><a href="{% url 'login' %}" class="nav-link px-2 link-dark" target="_self">Log in</a></li>
+            <li><a href="{% url 'signup' %}" class="nav-link px-2 link-dark" target="_self">Signup</a></li>
+         
     
           {% if  user.is_authenticated%}
-                {% comment %} Afficher l'information qui permet de voir si vous êtes login ou non (dans votre barre de navigation par exemple) {% endcomment %}
                 
                 <a class="btn btn-primary" href="{%url 'logout'%}?next={{request.path}}"> 
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
@@ -160,7 +154,27 @@
                 
                 </a> 
                 {% endif %}
-          </ul> 
+          </ul>  {% endcomment %}
+
+        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            <li><a href="#" class="nav-link px-2 link-secondary"><i class="bi bi-house" ></i></a></li>
+            <li><a href="{% url 'home' %}" class="nav-link px-2 link-dark" target="_self">Home</a></li>
+            <li class="auth-links">
+                {% if user.is_authenticated %}
+                    <a class="btn btn-primary" href="{%url 'logout'%}?next={{request.path}}"> 
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
+                        <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+                        </svg>
+                    
+                    </a> 
+                {% else %}
+                    <a href="{% url 'api' %}" class="nav-link px-2 link-dark" target="_self">Services</a>
+                    <a href="{% url 'signup' %}" class="nav-link px-2 link-dark" target="_self">Signup</a>
+                    <a href="{% url 'login' %}" class="nav-link px-2 link-dark" target="_self">Log in</a>
+                {% endif %}
+            </li>
+        </ul>
     
         </header>
       </div>
